# scarf

./: .gitignore  .toodles.yaml  .travis.yml  404.html  CNAME  ChangeLog.md  LICENSE  Main.hs  README.md  README.org  build-binary.sh  default.jwk.json  default.nix  index.html  install  install.sh  package-lock.json  package.json  package.yaml  plan.org  scarf.cabal  search.html  shell.nix  sitemap.xml  stack.yaml  todos.txt  treefmt.toml  tsconfig.json  u-test.sh  webpack.config.js
.github/actions/: check-formatting.sh  lint-haskell.sh
.github/workflows/: ci.yml
app/: Main.hs  open-issues.txt
data/: env.nix
db/: schema.sql
db/migrations/: 20190307192159_initial_migration.sql
docs/: mkdocs.yml
docs/docs/: distribute-your-software.md  end-user.md  index.md  project-status.md  scarf-for-libraries.md
end-user/: index.html
example-packages/: curl-runnings-0.10.0.dhall  curl-runnings-0.11.0-scarf.yaml  curl-runnings-0.11.0.dhall  scarf.dhall
nix/: sources.json
project-status/: index.html
scarf-for-libraries/: index.html
search/: search_index.json
server/: Server.hs
src/: Api.hs  Client.hs  Common.hs  Lib.hs  Main.hs  Models.hs  PackageSpec.hs  Types.hs
src/Nomia/: Name.hs  Namespace.hs
src/Scarf/: Api.hs  Client.hs  Common.hs  Environment.hs  Lib.hs  Package.hs  PackageSpec.hs  Types.hs
test/: Spec.hs
web/html/: index.html
web/src/: index.ts
web/src/common/: common.ts
web/src/components/: create-package.ts  home.ts  login.ts  package-details.ts  package-search.ts  signup.ts  user-account.ts
web/src/views/: .#create-package.html  create-package.html  home.html  login.html  package-details.html  package-search.html  signup.html  user-account.html
web/styles/: defaults.scss
