cabal-version:       >=1.10

name:                scarf
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              Shea Levy
maintainer:          Scarf Engineering Team <engineering@scarf.sh>
build-type:          Simple
data-files:          data/env.nix

executable scarf
  main-is:             Main.hs
  other-modules:       Paths_scarf
  autogen-modules:     Paths_scarf
  build-depends:       base >=4.13,
                       optparse-applicative >= 0.16,
                       process >=1.6,
                       text >=1.2,
                       placeholders >=0.1,
                       xdg-basedir >=0.2,
                       directory >=1.1,
                       filepath >=1.4
  default-language:    Haskell2010
